# skyshop

./: .env.sample  catalog.json  category.json  group.json  product.json  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: fill.py
catalog/migrations/: 0001_initial.py  0002_alter_product_category_alter_product_description.py  0002_product_manufactured_at.py  0002_version.py  0003_alter_product_created_at_alter_product_description_and_more.py  0003_alter_version_number_version.py  0004_alter_version_number_version.py  0005_alter_product_options.py  0005_product_owner.py  0006_product_owner.py  0007_merge_0005_product_owner_0006_product_owner.py
catalog/templates/catalog/: category_list.html  home.html  product_confirm_delete.html  product_detail.html  product_form.html  product_info.html  product_list.html  products_list.html
catalog/templates/catalog/includes/: inc_menu.html
catalog/templatetags/: my_tags.py
config/: settings.py  urls.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_token.py
users/templates/users/: login.html  password_reset.html  user_form.html
